2.4.4 -> 2.4.5:
	- call getpwnam()/endpwent() once before a chroot(), forcing name 
	  service shared libs to be loaded from outside of the root path
	- added vesrion stamp to lib/misc.o (and librpm.a by extension)
	- fixed config.sub, config.guess to recognize i686

2.4.3 -> 2.4.4:
	- restore working directory after installing a package w/ a chroot
	- dump the package stack when a dependency loop is encountered
	- when a user/group lookup fails, end*ent() and retry 
	- fixed broken --scripts argument (it was --s2)
	- only display the packager and url in -qi output if they have defined
	  values
	- print "(not installed)" as the install time for -p queries rather
	  then "not a number"
	- almost completely rewrote rcfile parsing; I'm sure this will
	  break things eventually but it's much more flexible now
	- added buildarch/buildos compatibility tables, listed values
	  in --showrc
	- added cpio archive building code; GNU cpio is no longer used!
	  packages created w/ rpm 2.4.4 and later cannot be installed with
	  rpm 2.4 - rpm 2.4.3 however (version of RPM before 2.4 will 
	  work fine, however). An "error -2 reading header" happens when
	  this is attempted
	- removed cpiobin from rpmrc
	- added rpmrc "provides" tag to allow easy fulfillment of 
	  automatically generated dependencies
	- look for random() in libm if it can't be found be default
	- fixed problems in Solaris's autodeps stuff (Eric Mumpower)
	- --setperms should work properly on directories now
	- --justdb on install, upgrade, and erasure causes a database
	  update w/o the filesystem being touched
	- fixed version comparison of a package w/ a serial tag against
	  a package w/o one
	- added BuildArchitectures: tag to spec file to enable builds
	  for alternate/multiple architectures
	- look for random() in -lucb
	- changed the licensing terms for librpm to allow redistribution
	  under the LGPL
	- applied man page changes from Alex deVries